tests/typing2/bad/testfile-borrow-5.rs


fn main() {
    let mut x = 3;
    let y = (&mut x, &x);
}